# CHATBOT

./: chatbot-backend.md  chatbot-frontend.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chatbot.db  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0fde65a5a330_initial_schema.py  a1b2c3d4e5f6_performance_composite_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  middleware.py
backend/app/core/: cache.py  config.py  database.py  db_types.py  exceptions.py  logging.py  rbac.py  redis.py  security.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py  pricing.py
backend/app/models/: __init__.py  analytics.py  audit.py  chat.py  document.py  feedback.py  knowledge.py  tenant.py  tool.py  user.py
backend/app/rag/: chunking.py  embeddings.py  extractors.py  reranker.py  retrieval.py  vectorstore.py
backend/app/repositories/: base.py  repos.py
backend/app/schemas/: auth.py  chat.py  common.py  document.py  feedback.py  knowledge.py  search.py  tenant.py  tool.py  user.py
backend/app/security/: guards.py
backend/app/services/: analytics_service.py  audit.py  auth_service.py  chat_service.py  storage.py  (+5 more)
backend/scripts/: init_db.py  seed.py
backend/tests/: conftest.py  locustfile.py  test_chunking.py  test_guards.py  test_rag_components.py  test_rag_eval.py  test_rbac.py  test_security.py  test_security_isolation.py
(+73 files in other folders)
