[project]
name = "chatbot-backend"
version = "1.0.0"
description = "Enterprise multi-tenant AI chatbot platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]   # B008: FastAPI Depends() in defaults is intentional

[tool.coverage.run]
source = ["app"]
omit = ["app/workers/*", "alembic/*", "scripts/*"]
